Add colored tags

--- a/docs/bulma-cssvar.sass
+++ b/docs/bulma-cssvar.sass
@@ -23,7 +23,7 @@ $prefix: "bulma-"
     @return change-color($color, $lightness: max($base-l, $target-l))
   @return var(--#{$prefix}text-strong)
 
-$cssvar-colors: ("primary": $primary, "link": $link, "info": $info, "success": $success, "warning": $warning, "danger": $danger, "light": $white-ter, "dark": $grey-darker)
+$cssvar-colors: ("primary": $primary, "link": $link, "info": $info, "success": $success, "warning": $warning, "danger": $danger)
 
 @function getCssVariable($color, $name)
   $hue: hue($color)
