--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -6,7 +6,7 @@ $textarea-min-height: 8em !default
   @extend %input
   box-shadow: $input-shadow
   max-width: 100%
-  width: 100%
+  width: calc(100% - 2 * #{$control-padding-horizontal})
   &[readonly]
     box-shadow: none
   // Colors
@@ -40,12 +40,14 @@ $textarea-min-height: 8em !default
     border-radius: $radius-rounded
     padding-left: calc(#{$control-padding-horizontal} + 0.375em)
     padding-right: calc(#{$control-padding-horizontal} + 0.375em)
+    width: calc(100% - 2 * calc(#{$control-padding-horizontal} + 0.375em))
   &.is-static
     background-color: transparent
     border-color: transparent
     box-shadow: none
     padding-left: 0
     padding-right: 0
+    width: 100%
 
 .textarea
   @extend %input-textarea
