--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -52,7 +52,7 @@ $dropdown-divider-background-color: $border-light !default
   padding-bottom: $dropdown-content-padding-bottom
   padding-top: $dropdown-content-padding-top
 
-.dropdown-item
+%dropdown-item, .dropdown-item
   color: $dropdown-item-color
   display: block
   font-size: 0.875rem
@@ -60,7 +60,7 @@ $dropdown-divider-background-color: $border-light !default
   padding: 0.375rem 1rem
   position: relative
 
-a.dropdown-item,
+%dropdown-item-a-button, a.dropdown-item,
 button.dropdown-item
   padding-right: 3rem
   text-align: left
