Update backers November 2019, Fix #2696

--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -11,14 +11,17 @@
 .bd-partnrs-list
   margin: -3rem 0 3rem
 
+$bd-partner-width: 12rem
+
 .bd-partner-sponsors
   align-items: center
   display: flex
   flex-wrap: wrap
   justify-content: space-between
   justify-content: space-around
+  justify-content: center
   margin: 0 auto
-  max-width: 66rem
+  max-width: (5.5 * $bd-partner-width)
 
 .bd-partner-sponsor
   align-items: center
@@ -99,6 +102,8 @@ $bd-partnrs-4: 1130px
       flex-shrink: 0
       margin-left: 1rem
       width: $carbon-width
+  .bd-partner-sponsor
+    width: $bd-partner-width
 
 +widescreen
   .bd-partnrs
