--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -14466,6 +14466,7 @@ svg {
   flex-wrap: wrap;
   justify-content: space-between;
   justify-content: space-around;
+  justify-content: center;
   margin: 0 auto;
   max-width: 66rem;
 }
@@ -14560,6 +14561,9 @@ svg {
     flex-shrink: 0;
     margin-left: 1rem;
     width: 300px;
+  }
+  .bd-partner-sponsor {
+    width: 12rem;
   }
 }
 
