--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -56,6 +56,19 @@
         </a>
 
         <div id="moreDropdown" class="navbar-dropdown">
+          <a class="navbar-item is-hidden-widescreen" href="{{ site.data.meta.github }}" target="_blank">
+            <span>
+              <span class="icon" style="color: #333;">
+                <i class="fab fa-lg fa-github-alt"></i>
+              </span>
+              <strong>GitHub</strong>
+              <br>
+              The official repository
+            </span>
+          </a>
+
+          <hr class="navbar-divider is-hidden-widescreen">
+
           {% for link_id in site.data.links.more %}
             {% assign link = site.data.links.by_id[link_id] %}
             <a class="navbar-item {% if page.route == link_id %}is-active{% endif %}" href="{{ site.url }}{{ link.path }}">
