--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -464,69 +464,71 @@ $column-gap: 0.75rem !default
     &.is-desktop
       display: flex
 
+  // Max number of column into a row
   @for $i from 1 through 12
     $col-max-width: percentage(1 / $i)
-    &.has-max-#{$i}
+    &.has-#{$i}
       flex-wrap: wrap
       & > .column
         min-width: $col-max-width
         max-width: $col-max-width
+    // Responsiveness
     +mobile
-      &.has-max-#{$i}-mobile
+      &.has-#{$i}-mobile
         flex-wrap: wrap
         display: flex
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +tablet
-      &.has-max-#{$i}-tablet
+      &.has-#{$i}-tablet
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +tablet-only
-      &.has-max-#{$i}-tablet-only
+      &.has-#{$i}-tablet-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
-          max-width: $col-max-width 
+          max-width: $col-max-width
     +touch
-      &.has-max-#{$i}-touch
+      &.has-#{$i}-touch
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +desktop
-      &.has-max-#{$i}-desktop
+      &.has-#{$i}-desktop
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +desktop-only
-      &.has-max-#{$i}-desktop-only
+      &.has-#{$i}-desktop-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +widescreen
-      &.has-max-#{$i}-widescreen
+      &.has-#{$i}-widescreen
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +widescreen-only
-      &.has-max-#{$i}-widescreen-only
+      &.has-#{$i}-widescreen-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
     +fullhd
-      &.has-max-#{$i}-fullhd
+      &.has-#{$i}-fullhd
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
-          max-width: $col-max-width   
-    
+          max-width: $col-max-width
+
 
 @if $variable-columns
   .columns.is-variable
