--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -472,6 +472,8 @@ $column-gap: 0.75rem !default
       & > .column
         min-width: $col-max-width
         max-width: $col-max-width
+        &.is-fullwidth
+          min-width: 100% !important
     // Responsiveness
     +mobile
       &.has-#{$i}-mobile
@@ -480,54 +482,72 @@ $column-gap: 0.75rem !default
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +tablet
       &.has-#{$i}-tablet
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +tablet-only
       &.has-#{$i}-tablet-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +touch
       &.has-#{$i}-touch
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +desktop
       &.has-#{$i}-desktop
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +desktop-only
       &.has-#{$i}-desktop-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +widescreen
       &.has-#{$i}-widescreen
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +widescreen-only
       &.has-#{$i}-widescreen-only
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
     +fullhd
       &.has-#{$i}-fullhd
         flex-wrap: wrap
         & > .column
           min-width: $col-max-width
           max-width: $col-max-width
+          &.is-fullwidth
+            min-width: 100% !important
 
 
 @if $variable-columns
