Fix #2471: Page padding for fixed spaced navbar

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -915,6 +915,9 @@ $(document).ready(function() {
       {% highlight html %}<html class="has-navbar-fixed-top">{% endhighlight %}
     </li>
   </ul>
+  <p>
+    If using <code>is-spaced</code> modifier on navbar, apply <code>has-spaced-navbar-fixed-top</code> or <code>has-spaced-navbar-fixed-bottom</code> to <code>&lt;html&gt;</code> or <code>&lt;body&gt;</code> instead.
+  </p>
 </div>
 
 <h4 class="title is-5">Try it out!</h4>
