--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -124,9 +124,11 @@ $navbar-breakpoint: $desktop !default
 
 html,
 body
-  &.has-navbar-fixed-top
+  &.has-navbar-fixed-top,
+  &.has-spaced-navbar-fixed-top
     padding-top: $navbar-height
-  &.has-navbar-fixed-bottom
+  &.has-navbar-fixed-bottom,
+  &.has-spaced-navbar-fixed-bottom
     padding-bottom: $navbar-height
 
 .navbar-brand,
@@ -268,9 +270,11 @@ a.navbar-item,
         overflow: auto
   html,
   body
-    &.has-navbar-fixed-top-touch
+    &.has-navbar-fixed-top-touch,
+    &.has-spaced-navbar-fixed-top-touch
       padding-top: $navbar-height
-    &.has-navbar-fixed-bottom-touch
+    &.has-navbar-fixed-bottom-touch,
+    &.has-spaced-navbar-fixed-bottom-touch
       padding-bottom: $navbar-height
 
 +from($navbar-breakpoint)
