Add variables size for layout hero

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -1,5 +1,8 @@
-// Main container
+$hero-padding: 1.5rem 0rem !default
+$hero-padding-medium: 9rem 0rem !default
+$hero-padding-large: 18rem 0rem !default
 
+// Main container
 .hero
   align-items: stretch
   display: flex
@@ -71,18 +74,15 @@
   // Sizes
   &.is-small
     .hero-body
-      padding-bottom: 1.5rem
-      padding-top: 1.5rem
+      padding: $hero-padding
   &.is-medium
     +tablet
       .hero-body
-        padding-bottom: 9rem
-        padding-top: 9rem
+        padding: $hero-padding-medium
   &.is-large
     +tablet
       .hero-body
-        padding-bottom: 18rem
-        padding-top: 18rem
+        padding: $hero-padding-large
   &.is-halfheight,
   &.is-fullheight,
   &.is-fullheight-with-navbar
