--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -18,7 +18,7 @@ meta:
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
-      <img src="{{ site.url }}/images/bulma-logo.png" width="112" height="28">
+      <img src="{{ site.url }}/images/bulma-logo.png" width="112" height="28" />
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -101,7 +101,7 @@ meta:
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
-      <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+      <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28" />
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
