--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -1,19 +1,19 @@
-$input-color: $text-strong !default
+$input-color: $grey-darker !default
 $input-background-color: $scheme-main !default
 $input-border-color: $border !default
 $input-height: $control-height !default
 $input-shadow: inset 0 0.0625em 0.125em rgba($scheme-invert, 0.05) !default
-$input-placeholder-color: rgba($input-color, 0.3) !default
+$input-placeholder-color: rgba($grey-darker, 0.3) !default
 
-$input-hover-color: $text-strong !default
+$input-hover-color: $grey-darker !default
 $input-hover-border-color: $border-hover !default
 
-$input-focus-color: $text-strong !default
+$input-focus-color: $grey-darker !default
 $input-focus-border-color: $link !default
 $input-focus-box-shadow-size: 0 0 0 0.125em !default
 $input-focus-box-shadow-color: rgba($link, 0.25) !default
 
-$input-disabled-color: $text-light !default
+$input-disabled-color: $grey !default
 $input-disabled-background-color: $background !default
 $input-disabled-border-color: $background !default
 $input-disabled-placeholder-color: rgba($input-disabled-color, 0.3) !default
