Add is-sr-only option to button

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,4 +1,4 @@
-$button-color: $text-strong !default
+$button-color: red !default
 $button-background-color: $scheme-main !default
 $button-family: false !default
 
@@ -21,7 +21,7 @@ $button-active-border-color: $link-active-border !default
 
 $button-text-color: $text !default
 $button-text-hover-background-color: $background !default
-$button-text-hover-color: $text-strong !default
+$button-text-hover-color: red !default
 
 $button-disabled-background-color: $scheme-main !default
 $button-disabled-border-color: $border !default
@@ -78,6 +78,11 @@ $button-static-border-color: $border !default
     &:first-child:last-child
       margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
       margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+  .is-sr-only
+    + .icon
+        &:last-child:not(:first-child)
+          margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+          margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
   // States
   &:hover,
   &.is-hovered
