Add level align modifiers

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -279,3 +279,9 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .is-relative
   position: relative !important
+  
+$alignments-self: ('start': 'flext-start', 'center': 'center', 'bottom': 'flex-end', 'stretch': 'stretch')
+
+@each $align-self, $value in $alignments-self
+  .align-#{$align-self}
+    align-self: $value !important
