Transform 0.8.0 styles to support both RTL and LTR
#3 #4 #5

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -144,33 +144,53 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 @each $display in $displays
   .is-#{$display}
     display: #{$display} !important
+    @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+      flex-direction: row-reverse
   +mobile
     .is-#{$display}-mobile
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +tablet
     .is-#{$display}-tablet
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +tablet-only
     .is-#{$display}-tablet-only
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +touch
     .is-#{$display}-touch
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +desktop
     .is-#{$display}-desktop
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +desktop-only
     .is-#{$display}-desktop-only
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +widescreen
     .is-#{$display}-widescreen
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +widescreen-only
     .is-#{$display}-widescreen-only
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
   +fullhd
     .is-#{$display}-fullhd
       display: #{$display} !important
+      @if (($right == 'left') and (($display == 'flex') or ($display == 'inline-flex')))
+        flex-direction: row-reverse
 
 .is-hidden
   display: none !important
