--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -29,6 +29,8 @@ $card-media-margin: $block-spacing !default
   align-items: stretch
   box-shadow: $card-header-shadow
   display: flex
+  @if ($right == 'left')
+    flex-direction: row-reverse
 
 .card-header-title
   align-items: center
@@ -37,6 +39,8 @@ $card-media-margin: $block-spacing !default
   flex-grow: 1
   font-weight: $card-header-weight
   padding: $card-header-padding
+  @if ($right == 'left')
+    flex-direction: row-reverse
   &.is-centered
     justify-content: center
 
@@ -46,6 +50,8 @@ $card-media-margin: $block-spacing !default
   display: flex
   justify-content: center
   padding: $card-header-padding
+  @if ($right == 'left')
+    flex-direction: row-reverse
 
 .card-image
   display: block
@@ -60,6 +66,8 @@ $card-media-margin: $block-spacing !default
   border-top: $card-footer-border-top
   align-items: stretch
   display: flex
+  @if ($right == 'left')
+    flex-direction: row-reverse
 
 .card-footer-item
   align-items: center
@@ -69,6 +77,8 @@ $card-media-margin: $block-spacing !default
   flex-shrink: 0
   justify-content: center
   padding: $card-footer-padding
+  @if ($right == 'left')
+    flex-direction: row-reverse
   &:not(:last-child)
     border-#{$right}: $card-footer-border-top
 
