--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -21,6 +21,8 @@ $dropdown-divider-background-color: $border-light !default
   display: inline-flex
   position: relative
   vertical-align: top
+  @if ($right == 'left')
+    flex-direction: row-reverse
   &.is-active,
   &.is-hoverable:hover
     .dropdown-menu
