--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -11,6 +11,8 @@ $media-border-color: rgba($border, 0.5) !default
   .media
     border-top: 1px solid $media-border-color
     display: flex
+    @if ($right == 'left')
+      flex-direction: row-reverse
     padding-top: 0.75rem
     .content:not(:last-child),
     .control:not(:last-child)
