--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -78,6 +78,8 @@ $message-colors: $colors !default
   line-height: 1.25
   padding: $message-header-padding
   position: relative
+  @if ($right == 'left')
+    flex-direction: row-reverse
   .delete
     flex-grow: 0
     flex-shrink: 0
