--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -40,6 +40,8 @@ $modal-card-body-padding: 20px !default
   // Modifiers
   &.is-active
     display: flex
+    @if ($right == 'left')
+      flex-direction: row-reverse
 
 .modal-background
   @extend %overlay
@@ -83,6 +85,8 @@ $modal-card-body-padding: 20px !default
   justify-content: flex-start
   padding: $modal-card-head-padding
   position: relative
+  @if ($right == 'left')
+    flex-direction: row-reverse
 
 .modal-card-head
   border-bottom: $modal-card-head-border-bottom
