--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -66,6 +66,8 @@ $panel-colors: $colors !default
   display: flex
   font-size: $panel-tabs-font-size
   justify-content: center
+  @if ($right == 'left')
+    flex-direction: row-reverse
   a
     border-bottom: $panel-tab-border-bottom
     margin-bottom: -1px
@@ -87,6 +89,8 @@ $panel-colors: $colors !default
   display: flex
   justify-content: flex-start
   padding: 0.5em 0.75em
+  @if ($right == 'left')
+    flex-direction: row-reverse
   input[type="checkbox"]
     margin-#{$right}: 0.75em
   & > .control
