--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -93,10 +93,10 @@ $content-table-foot-cell-color: $text-strong !default
       ul
         list-style-type: square
   dd
-    margin-left: 2em
+    margin-#{$left}: 2em
   figure
-    margin-left: 2em
-    margin-right: 2em
+    margin-#{$left}: 2em
+    margin-#{$right}: 2em
     text-align: center
     &:not(:first-child)
       margin-top: 2em
