--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -9,6 +9,8 @@ $icon-dimensions-large: 3rem !default
   justify-content: center
   height: $icon-dimensions
   width: $icon-dimensions
+  @if ($right == 'left')
+    flex-direction: row-reverse
   // Sizes
   &.is-small
     height: $icon-dimensions-small
