--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -27,6 +27,8 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
   padding-top: $control-padding-vertical
   position: relative
   vertical-align: top
+  @if ($right == 'left')
+    flex-direction: row-reverse
   // States
   &:focus,
   &.is-focused,
