--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -37,6 +37,8 @@ $tabs-toggle-link-active-color: $link-invert !default
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
+  @if ($right == 'left')
+    flex-direction: row-reverse
   a
     align-items: center
     border-bottom-color: $tabs-border-bottom-color
@@ -48,6 +50,8 @@ $tabs-toggle-link-active-color: $link-invert !default
     margin-bottom: -#{$tabs-border-bottom-width}
     padding: $tabs-link-padding
     vertical-align: top
+    @if ($right == 'left')
+      flex-direction: row-reverse
     &:hover
       border-bottom-color: $tabs-link-hover-border-bottom-color
       color: $tabs-link-hover-color
@@ -66,8 +70,10 @@ $tabs-toggle-link-active-color: $link-invert !default
     flex-grow: 1
     flex-shrink: 0
     justify-content: flex-start
+    @if ($right == 'left')
+      flex-direction: row-reverse
     &.is-#{$left}
-      padding-right: 0.75em
+      padding-#{$right}: 0.75em
     &.is-center
       flex: none
       justify-content: center
@@ -75,7 +81,7 @@ $tabs-toggle-link-active-color: $link-invert !default
       padding-right: 0.75em
     &.is-#{$right}
       justify-content: flex-end
-      padding-left: 0.75em
+      padding-#{$left}: 0.75em
   .icon
     &:first-child
       margin-#{$right}: 0.5em
