--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -8,6 +8,8 @@ $tag-delete-margin: 1px !default
   display: flex
   flex-wrap: wrap
   justify-content: flex-start
+  @if ($right == 'left')
+    flex-direction: row-reverse
   .tag
     margin-bottom: 0.5rem
     &:not(:last-child)
@@ -26,32 +28,32 @@ $tag-delete-margin: 1px !default
   &.is-centered
     justify-content: center
     .tag
-      margin-right: 0.25rem
-      margin-left: 0.25rem
-  &.is-right
+      margin-#{$right}: 0.25rem
+      margin-#{$left}: 0.25rem
+  &.is-#{$right}
     justify-content: flex-end
     .tag
       &:not(:first-child)
-        margin-left: 0.5rem
+        margin-#{$left}: 0.5rem
       &:not(:last-child)
-        margin-right: 0
-  &.is-left
+        margin-#{$right}: 0
+  &.is-#{$left}
     justify-content: flex-start
     .tag
       &:not(:first-child)
-        margin-left: 0
+        margin-#{$left}: 0
       &:not(:last-child)
-        margin-right: 0.5rem
+        margin-#{$right}: 0.5rem
   &.has-addons
     .tag
-      margin-right: 0
+      margin-#{$right}: 0
       &:not(:first-child)
-        margin-left: 0
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
+        margin-#{$left}: 0
+        border-bottom-#{$left}-radius: 0
+        border-top-#{$left}-radius: 0
       &:not(:last-child)
-        border-bottom-right-radius: 0
-        border-top-right-radius: 0
+        border-bottom-#{$right}-radius: 0
+        border-top-#{$right}-radius: 0
 
 .tag:not(body)
   align-items: center
@@ -63,9 +65,11 @@ $tag-delete-margin: 1px !default
   height: 2em
   justify-content: center
   line-height: 1.5
-  padding-left: 0.75em
-  padding-right: 0.75em
+  padding-#{$left}: 0.75em
+  padding-#{$right}: 0.75em
   white-space: nowrap
+  @if ($right == 'left')
+    flex-direction: row-reverse
   .delete
     margin-#{$left}: 0.25rem
     margin-#{$right}: -0.375rem
@@ -92,17 +96,17 @@ $tag-delete-margin: 1px !default
     font-size: $size-medium
   .icon
     &:first-child:not(:last-child)
-      margin-left: -0.375em
-      margin-right: 0.1875em
+      margin-#{$left}: -0.375em
+      margin-#{$right}: 0.1875em
     &:last-child:not(:first-child)
-      margin-left: 0.1875em
-      margin-right: -0.375em
+      margin-#{$left}: 0.1875em
+      margin-#{$right}: -0.375em
     &:first-child:last-child
-      margin-left: -0.375em
-      margin-right: -0.375em
+      margin-#{$left}: -0.375em
+      margin-#{$right}: -0.375em
   // Modifiers
   &.is-delete
-    margin-left: $tag-delete-margin
+    margin-#{$left}: $tag-delete-margin
     padding: 0
     position: relative
     width: 2em
