--- a/sass/grid/tiles.sass
+++ b/sass/grid/tiles.sass
@@ -28,6 +28,8 @@ $tile-spacing: 0.75rem !default
   +tablet
     &:not(.is-child)
       display: flex
+      @if ($right == 'left')
+        flex-direction: row-reverse
     @for $i from 1 through 12
       &.is-#{$i}
         flex: none
