--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2953,6 +2953,15 @@ fieldset[disabled] .button {
   justify-content: flex-end;
 }
 
+.buttons.is-right:not(.has-addons) .button:not(.is-fullwidth) {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.buttons.is-left {
+  justify-content: flex-start;
+}
+
 .buttons.is-left:not(.has-addons) .button:not(.is-fullwidth) {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -3945,6 +3954,18 @@ fieldset[disabled] .button {
   margin-right: 0;
 }
 
+.tags.is-left {
+  justify-content: flex-start;
+}
+
+.tags.is-left .tag:not(:first-child) {
+  margin-left: 0;
+}
+
+.tags.is-left .tag:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
 .tags.has-addons .tag {
   margin-right: 0;
 }
@@ -4151,29 +4172,6 @@ a.tag:hover {
 .title sup,
 .subtitle sup {
   font-size: 0.75em;
-}
-
-.file.is-left {
-  justify-content: flex-start;
-}
-
-.file.is-left .file-cta {
-  border-radius: 0 0 4px 4px;
-}
-
-.file.is-left .file-name {
-  border-radius: 4px 4px 0 0;
-  border-width: 1px 1px 1px 0;
-  order: 1;
-}
-
-.file-label {
-  align-items: stretch;
-  display: flex;
-  cursor: pointer;
-  justify-content: flex-start;
-  overflow: hidden;
-  position: relative;
 }
 
 .title .tag,
@@ -5168,36 +5166,22 @@ fieldset[disabled] .select select:hover {
   border-radius: 0 4px 4px 0;
 }
 
-.tags.is-left {
+.file.is-right .file-name {
+  border-radius: 4px 0 0 4px;
+  border-width: 1px 0 1px 1px;
+  order: -1;
+}
+
+.file.is-left {
   justify-content: flex-start;
 }
 
-.tags.is-left .tag:not(:first-child) {
-  margin-left: 0;
-}
-
-.tags.is-left .tag:not(:last-child) {
-  margin-right: 0.5rem;
-}
-
-.tag:not(body) {
-  align-items: center;
-  background-color: whitesmoke;
-  border-radius: 4px;
-  color: #4a4a4a;
-  display: inline-flex;
-  font-size: 0.75rem;
-  height: 2em;
-  justify-content: center;
-  line-height: 1.5;
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-  white-space: nowrap;
-
+.file.is-left .file-cta {
+  border-radius: 0 0 4px 4px;
 }
 
 .file.is-left .file-name {
-  border-radius: 0 4px 4px 0;
+  border-radius: 4px 4px 0 0;
   border-width: 1px 1px 1px 0;
   order: -1;
 }
