Add cursor helper

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -279,3 +279,6 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .is-relative
   position: relative !important
+
+.has-cursor-pointer
+  cursor: pointer !important
